Stop slight vertical overflow on letter picker

--- a/src/scss/monkey/_mobile.scss
+++ b/src/scss/monkey/_mobile.scss
@@ -20,7 +20,7 @@
     width: 700px;
   }
   .letter-spans {
-    height: 90px;
+    height: 92px;
     overflow-x: scroll;
   }
 }
